examples/valid/02_struct_enum_match.lane
module Examples.Valid02

import Basic.Io.{ println }
import Basic.Ops.*

pub struct Point {
  x : Int
  y : Int
}

pub enum Option[A] {
  none()
  some(A)
}

pub fn unwrap_or(value : Option[Int], fallback : Int) -> Int {
  match value {
    none() => fallback
    some(x) => x
  }
}

pub fn sum_point(point : Point) -> Int {
  match point {
    Point::{ x, y } => x + y
  }
}

pub let origin : Point = Point::{ x: 0, y: 0 }

pub let chosen : Option[Int] = some(1)

pub fn answer() -> Unit ! Io {
  if sum_point(origin) == 0 && unwrap_or(chosen, 0) == 1 {
    println("point=0 option=1")
  } else {
    println("bad:point=0 option=1")
  }
}
